# src/main.rs
@@ -1,4 +1,5 @@
 mod args;
+mod async_order;
 mod auth;
 mod backup;
 mod bitcoind;
@@ -49,16 +50,16 @@ use crate::auth::conditional_auth_middleware;
 use crate::error::AppError;
 use crate::ldk::stop_ldk;
 use crate::routes::{
-    address, asset_balance, asset_metadata, backup, btc_balance, cancel_hodl_invoice,
-    change_password, check_indexer_url, check_proxy_endpoint, claim_hodl_invoice, close_channel,
-    connect_peer, create_utxos, decode_ln_invoice, decode_rgb_invoice, disconnect_peer,
-    estimate_fee, fail_transfers, get_asset_media, get_channel_id, get_payment, get_swap, inflate,
-    init, invoice_status, issue_asset_cfa, issue_asset_ifa, issue_asset_nia, issue_asset_uda,
-    keysend, list_assets, list_channels, list_payments, list_peers, list_swaps, list_transactions,
-    list_transfers, list_unspents, ln_invoice, lock, maker_execute, maker_init, network_info,
-    node_info, open_channel, post_asset_media, refresh_transfers, restore, revoke_token,
-    rgb_invoice, send_btc, send_onion_message, send_payment, send_rgb, shutdown, sign_message,
-    sync, taker, unlock,
+    address, asset_balance, asset_metadata, async_order_new, backup, btc_balance,
+    cancel_hodl_invoice, change_password, check_indexer_url, check_proxy_endpoint,
+    claim_hodl_invoice, close_channel, connect_peer, create_utxos, decode_ln_invoice,
+    decode_rgb_invoice, disconnect_peer, estimate_fee, fail_transfers, get_asset_media,
+    get_channel_id, get_payment, get_swap, inflate, init, invoice_status, issue_asset_cfa,
+    issue_asset_ifa, issue_asset_nia, issue_asset_uda, keysend, list_assets, list_channels,
+    list_payments, list_peers, list_swaps, list_transactions, list_transfers, list_unspents,
+    ln_invoice, lock, maker_execute, maker_init, network_info, node_info, open_channel,
+    post_asset_media, refresh_transfers, restore, revoke_token, rgb_invoice, send_btc,
+    send_onion_message, send_payment, send_rgb, shutdown, sign_message, sync, taker, unlock,
 };
 use crate::utils::{start_daemon, AppState, LOGS_DIR};
 
@@ -113,6 +114,7 @@ pub(crate) async fn app(args: UserArgs) -> Result<(Router, Arc<AppState>), AppEr
         // all routes before this will have the default body limit disabled
         .layer(DefaultBodyLimit::disable())
         .route("/address", post(address))
+        .route("/apay/new", post(async_order_new))
         .route("/assetbalance", post(asset_balance))
         .route("/assetmetadata", post(asset_metadata))
         .route("/backup", post(backup))
